--- a/PHP Final Assignment/FA_Register.html
+++ b/PHP Final Assignment/FA_Register.html
@@ -6,12 +6,11 @@
 </head>
 <body>
 <nav>
-	<label class="logo">DeliverFood</label>
+	<label class="logo">Foodie Express</label>
 	<ul>
-		<li><a class="active" href="FA_Home.php">Home</a></li>
-		<li><a class="active" href="FA_About.php">About</a></li>
-		<li><a href="#">Food</a></li>
-		<li><a href="#">Contact</a></li>
+		<li><a href="FA_Home.php">Home</a></li>
+		<li><a href="FA_About.php">About</a></li>
+		<li><a href="FA_Food.php">Food</a></li>
 		<li><a href="#">Cart</a></li>
 		<li><a href="FA_Login.html">Login</a></li>
 	</ul>
@@ -40,6 +39,11 @@
 	<tr>
 		<td><label for="email">Email:</label></td>
 		<td><input type="email" id="email" name="email" required></td>
+	</tr>
+
+	<tr>
+		<td><label for="address">Address:</label></td>
+		<td><input type="address"id="address" name="address" required></td>
 	</tr>
 
 	<tr>
