--- a/PHP Final Assignment/FA_Login.html
+++ b/PHP Final Assignment/FA_Login.html
@@ -4,7 +4,7 @@
 	<title>Login</title>
 	<link rel="stylesheet" href="FA_Login.css">
 	<style>
-		.btnLogin {
+		.btn-Login {
 		  display: block;
 		  width: 55px;
 		  height: 25px;
@@ -52,7 +52,7 @@
 		<label for="password">Password:</label>
 		<input type="password" id="password" name="password" required>
 		<br><br>
-		<input class="btnLogin" type="submit" name="submit" value="Login">
+		<input class="btn-Login" type="submit" name="submit" value="Login">
 		<br>
 	</form>
 		<p>New user: <a href="FA_Register.html">Click Register</a></p>
