--- a/PHP Final Assignment/FA_Register.html
+++ b/PHP Final Assignment/FA_Register.html
@@ -3,6 +3,14 @@
 <head>
 	<title>Registration</title>
 	<link rel="stylesheet" href="FA_Login.css">
+	<style>
+		.btn-Register {
+			display: block;
+			width: 60px;
+			height: 25px;
+			margin: auto;
+		}
+	</style>
 </head>
 <body>
 <nav>
@@ -57,7 +65,7 @@
 	</tr>
 </table>
 <br>
-<input type="submit" name="submit" value="Submit">
+<input class="btn-Register" type="submit" name="submit" value="Submit">
 
 </form>
 </div>
