--- a/PHP Final Assignment/FA_Login.html
+++ b/PHP Final Assignment/FA_Login.html
@@ -24,10 +24,6 @@
             color: white;
         }
 
-        .footer-content {
-            font-size: 15px;
-            color: white;
-        }
 	</style>
 </head>
 <body>
@@ -59,7 +55,7 @@
 </div>
 
 <footer class="footer">
-	<p>Contact us at: info@example.com</a></p>
+	<p>&copy; 2023 Foodie Express. All rights reserved.</a></p>
 </footer>
 
 </body>
