--- a/PHP Final Assignment/FA_Register.html
+++ b/PHP Final Assignment/FA_Register.html
@@ -10,6 +10,19 @@
 			height: 25px;
 			margin: auto;
 		}
+
+		footer {
+            background-color: darkred;
+            text-align: center;
+			position: fixed;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			padding: 20px;
+			text-align: center;
+			font-size: 15px;
+            color: white;
+        }
 	</style>
 </head>
 <body>
@@ -69,5 +82,12 @@
 
 </form>
 </div>
+
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2023 Foodie Express. All rights reserved.</p>
+    </div>
+</footer>
+
 </body>
 </html>
