--- a/PHP Final Assignment/FA_Login.html
+++ b/PHP Final Assignment/FA_Login.html
@@ -9,6 +9,7 @@
 		  width: 55px;
 		  height: 25px;
 		  margin: auto;
+		  cursor: pointer;
 		}
 
 		footer {
@@ -23,7 +24,6 @@
 			font-size: 15px;
             color: white;
         }
-
 	</style>
 </head>
 <body>
