--- a/PHP Final Assignment/FA_Register.html
+++ b/PHP Final Assignment/FA_Register.html
@@ -9,6 +9,7 @@
 			width: 60px;
 			height: 25px;
 			margin: auto;
+			cursor: pointer;
 		}
 
 		footer {
@@ -46,7 +47,7 @@
 		<td><label for="username">Username:</label></td>
 		<td><input type="text" id="username" name="username" required></td>
 	</tr>
-	
+
 	<tr>
 		<td><label for="password">Password:</label></td>
 		<td><input type="password" id="password" name="password" minlength="4" required></td>
@@ -76,10 +77,9 @@
 		<td><label for="terms">Acceptance of terms & conditions:</label></td>
 		<td><input type="checkbox" id="terms" name="terms" required></td>
 	</tr>
-</table>
-<br>
-<input class="btn-Register" type="submit" name="submit" value="Submit">
 
+</table><br>
+<input class="btn-Register" type="submit" name="submit" value="Submit">
 </form>
 </div>
 
