--- a/PHP Final Assignment/FA_Login.html
+++ b/PHP Final Assignment/FA_Login.html
@@ -40,7 +40,7 @@
 
 <center>
 <div class="wrapper">
-	<h2>Welcome to Foodie Express Please Login.</h2><br>
+	<h2>Welcome to Foodie Express Please Login.</h2><br><br>
 	<form action="Login.php" method="post">
 		<label for="username">Username:</label>
 		<input type="text" id="username" name="username" required>
