--- a/PHP Final Assignment/FA_Register.html
+++ b/PHP Final Assignment/FA_Register.html
@@ -31,9 +31,9 @@
 	<label class="logo">Foodie Express</label>
 	<ul>
 		<li><a href="FA_Home.php">Home</a></li>
-		<li><a href="FA_About.php">About</a></li>
+		<li><a href="">About</a></li>
 		<li><a href="FA_Food.php">Food</a></li>
-		<li><a href="#">Cart</a></li>
+		<li><a href="">Cart</a></li>
 		<li><a href="FA_Login.html">Login</a></li>
 	</ul>
 </nav><br>
